--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An electron powered app that adapts kiwix to use the SAFE network for retrieval of zim files.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "standard",
     "start": "electron ."
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/DaBrown95/safe-wiki#readme",
   "devDependencies": {
-    "electron": "1.7.9"
+    "electron": "1.7.9",
+    "standard": "^10.0.3"
   }
 }
