--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "electron": "1.7.9",
     "standard": "^10.0.3"
+  },
+  "dependencies": {
+    "requirejs": "^2.3.5"
   }
 }
