--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "js/main.js",
   "scripts": {
     "test": "standard",
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "repository": {
     "type": "git",
@@ -18,10 +20,51 @@
   },
   "homepage": "https://github.com/DaBrown95/safe-wiki#readme",
   "devDependencies": {
-    "electron": "1.7.9",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "electron-forge": "^4.1.3",
+    "electron-prebuilt-compile": "1.7.9",
     "standard": "^10.0.3"
   },
   "dependencies": {
+    "electron-compile": "^6.4.2",
+    "electron-squirrel-startup": "^1.0.0",
     "requirejs": "^2.3.5"
+  },
+  "config": {
+    "forge": {
+      "make_targets": {
+        "win32": [
+          "squirrel"
+        ],
+        "darwin": [
+          "zip"
+        ],
+        "linux": [
+          "deb",
+          "rpm"
+        ]
+      },
+      "electronPackagerConfig": {
+        "ignore": [".idea"],
+        "name": "SAFE Wiki",
+        "appBundleId": "com.electron.safe-wiki",
+        "appCategoryType": "public.app-category.education",
+        "packageManager": "yarn"
+      },
+      "electronWinstallerConfig": {
+        "name": ""
+      },
+      "electronInstallerDebian": {},
+      "electronInstallerRedhat": {},
+      "github_repository": {
+        "owner": "",
+        "name": ""
+      },
+      "windowsStoreConfig": {
+        "packageName": ""
+      }
+    }
   }
 }
