Migrate from RequireJS to ES6 Modules
RequireJS has been dropped in favour of using ES6 Modules. A big thank
you to https://github.com/jonbretman/amd-to-as6 which helped greatly in
migrating AMD modules to their ES6 equivalents. This was done mainly due
to personal preference, I prefer the ES6 syntax and it helps to 'future
proof' the codebase.

Many files have been refactored according to JS 'standard' style. Please
note the code style hasn't been fully adhered to yet. Before the repo is
made public, I will ensure that the code base more stringently adheres
to the style guide.

jQuery and Q are now sourced from npm rather than statically included.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "electron-compile": "^6.4.2",
     "electron-squirrel-startup": "^1.0.0",
-    "requirejs": "^2.3.5"
+    "jquery": "^3.2.1",
+    "q": "^1.5.1"
   },
   "config": {
     "forge": {
@@ -47,7 +48,9 @@
         ]
       },
       "electronPackagerConfig": {
-        "ignore": [".idea"],
+        "ignore": [
+          ".idea"
+        ],
         "name": "SAFE Wiki",
         "appBundleId": "com.electron.safe-wiki",
         "appCategoryType": "public.app-category.education",
