Update license information and README
License information for application has been updated to include
relevant information about myself, David Brown, and SAFE Wiki. If any
license information has been improperly updated this will be fixed as
soon as I am made aware of it.

Basic improvements to the README have been made, including attribution
to Kiwix.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,13 @@
     "jquery": "^3.2.1",
     "q": "^1.5.1"
   },
+  "standard": {
+    "ignore": [
+      "/js/lib/xzdec.js",
+      "/js/lib/bootstrap.js",
+      "/js/lib/cookies.js"
+    ]
+  },
   "config": {
     "forge": {
       "make_targets": {
