--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "safe-wiki",
+  "productName": "SAFE Wiki",
   "version": "1.0.0",
   "description": "An electron powered app that adapts kiwix to use the SAFE network for retrieval of zim files.",
+  "identifier": "com.electron.safe-wiki",
+  "vendor": "David Brown",
   "main": "js/main.js",
   "scripts": {
     "test": "standard",
@@ -28,6 +31,8 @@
     "standard": "^10.0.3"
   },
   "dependencies": {
+    "@maidsafe/safe-node-app": "latest",
+    "electron": "latest",
     "electron-compile": "^6.4.2",
     "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.2.1",
