--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "electron-forge": "^4.1.3",
-    "electron-prebuilt-compile": "1.7.9",
+    "electron-forge": "^5.1.0",
+    "electron-prebuilt-compile": "1.8.2",
     "standard": "^10.0.3"
   },
   "dependencies": {
     "@maidsafe/safe-node-app": "0.6.1",
-    "electron": "latest",
+    "electron": "^1.8.2",
     "electron-compile": "^6.4.2",
     "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.2.1",
